--- a/css/hojas-estilos.css
+++ b/css/hojas-estilos.css
@@ -1,5 +1,130 @@
-.borde { 
- border: 1px solid black;
- padding: 15px;
+body { 
+    padding-top: 20px;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%; 
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;   
+    }
 
-}
+.borde { 
+    border: 1px solid black;
+    padding: 15px;
+    }
+
+#cabecera { 
+    text-align: center;
+    }
+
+#menu { 
+    text-align: center;
+    }
+
+#menu a { 
+    display: inline-block;
+    background-color: #adbecf;
+    color: black;
+    padding: 1px 20px 1px 20px;
+    text-decoration: none;
+    line-height: normal;
+    width: 15%;
+    border-radius: 1px;
+    }
+
+ #menu a:hover { 
+    color: white;
+    background-color: gray;
+    }
+
+#menu a:active { 
+    color: violet;
+    }
+
+#menu .menu_activo { 
+    background-color: #d39c87;
+    }
+        
+#sec_quien_soy  { 
+    display: flex;
+   }
+
+#sec_quien_soy #title_soy_dg { 
+    margin-bottom: 1px;
+     }
+
+#sec_quien_soy #small_soy_dg { 
+    font-size:10px;
+     }
+
+#sec_quien_soy #art_soy p { 
+    text-align: justify;
+     }
+
+    
+#sec_quien_soy #art_soy hr { 
+    width: 30%;
+    height: 3px;
+    margin-left: 0px; 
+    background-color: black;
+    border-radius: 50%;
+    transform: rotate(1deg);
+     }
+
+#sec_a_que_me_dedico { 
+    background-color: #6fa8dc;
+    color: white;
+    text-align: center;
+    }
+
+#sec_a_que_me_dedico hr { 
+    width: 30%;
+    height: 3px;
+    border-radius: 50%;
+    background-color:white;
+    }
+
+#sec_a_que_me_dedico h1 { 
+    margin-bottom: 0px; 
+    }
+
+#sec_como_puedo_ayudarte { 
+    text-align: center; 
+    }
+
+#sec_como_puedo_ayudarte #sec_servicios { 
+    display: flex; 
+    justify-content: space-bertween;
+    }
+
+#sec_como_puedo_ayudarte #sec_servicios .art_tz { 
+    margin-left: 15px; 
+    }
+
+#sec_como_puedo_ayudarte #sec_servicios article{ 
+    background-color: #FF9800;
+    color: white;
+    border: 2px solid blue;
+    }
+
+#sec_como_puedo_ayudarte #sec_servicios article p{ 
+    text-align:justify;
+    }
+
+#sec_herramientas { 
+    color: white;
+    text-align: center;
+    background-color:  #6fa8dc;
+    }
+
+#sec_herramientas table { 
+    color: black;
+    }
+
+ #sec_herramientas table tbody img{ 
+    width: 40%
+    }
+
+#pie_de_pagina { 
+    text-align: center;
+     }
+                  
+              
