--- a/css/nuestraEmpresa.css
+++ b/css/nuestraEmpresa.css
@@ -39,8 +39,8 @@ body {
     color: violet;
     }
 
-#menu .menu_activo { 
-    background-color: #d39c87;
+#menu .menu-activo { 
+    background-color: #eb4c0d;
     }
         
 #quienes_somos { 
